--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logolion.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HunterPro - Earn Money by Finding Clients</title>
+    <title>LeoPay - Earn Money by Finding Clients</title>
     <meta name="description" content="Perfect for students, homemakers, and part-timers. Find businesses that need websites or digital services and earn 50% commission on every successful deal." />
   </head>
   <body>
